--- a/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_pension_age_not_reached.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_pension_age_not_reached.govspeak.erb
@@ -1,3 +1,6 @@
 <% content_for :title do %>
-  You must reach State Pension age before 6 April 2016 to use this calculator
+  You must have reached State Pension age before 6 April 2016 to top up
+<% end %>
+<% content_for :body do %>
+You need to be eligible for the basic State Pension to make a top up. If you reach State Pension age after 6 April 2016, you’ll be eligible for the [new State Pension](/new-state-pension) instead.
 <% end %>
