Update results page for calculator
Added some extra information based on Feedex comments. 

Trello: https://trello.com/c/twwy5H0W/383-state-pension-top-up-calculator-and-information

--- a/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-topup/outcomes/outcome_topup_calculations.govspeak.erb
@@ -14,27 +14,19 @@
   <% end %>
 <% end %>
 
+The contribution amount is an estimate. The top up is taxable as income. 
+
+Check the different ways you can [increase your pension](/state-pension/increase-the-amount-youll-get) to make sure topping up is the best option for you. 
 
   You should get [financial advice](/plan-retirement-income/get-financial-advice) when planning your retirement income.
 
-  The contribution amount is an estimate.
-
   ##Apply
 
-  You can [apply online](https://www.tax.service.gov.uk/forms/form/State-Pension-Top-Up-Request/new). You need your National Insurance number and one of the following to prove your identity:
+ [Apply online or by phone](/voluntary-national-insurance-contributions/top-up-your-state-pension) before 5 April 2017.
 
-  - P60
-  - passport
-  - payslip
+##Refunds and inheritance
 
-  You can also apply over the phone.
+After we receive your payment you’ll have 90 days to get a refund if you change your mind. 
 
-  $C
-  **State Pension top up**\\
-  Telephone: 0345 600 4270\\
-  Textphone: 0300 200 3519\\
-  Monday to Friday, 8am to 8pm\\
-  Saturday, 8am to 4pm\\
-  [Find out about call charges](/call-charges)
-  $C
+The inheritance rules for the State Pension top up are the same as for the [Additional State Pension](/additional-state-pension/further-information).
 <% end %>
