--- a/lib/smart_answer_flows/landlord-immigration-check/questions/has_eu_documents.govspeak.erb
+++ b/lib/smart_answer_flows/landlord-immigration-check/questions/has_eu_documents.govspeak.erb
@@ -9,5 +9,9 @@
 
 <% content_for :body do %>
   - passport or national identity card
-  - UK registration certificate or document, eg a residence card
+  - UK registration certificate marked 'Residence documentation'
+<% end %>
+
+<% content_for :hint do %>
+  The registration certificate can be in their passport, or on a pink or blue document from the Home Office.
 <% end %>
