2i Content changes for Proof residence question
This commit makes updates to the EU/EEA proof residence question.

These updates were made upon request from the Content team post 2i.

I have reviewed the changes to the checksums and  regression test artefacts
and they appear as expected. They have been included to this commit.

Already existing unit, regression and integration tests passed, giving assurance
that the aforementioned commit/changes have had no (interfering) effect to
other smart answers.

--- a/lib/smart_answer_flows/landlord-immigration-check/questions/has_other_documents.govspeak.erb
+++ b/lib/smart_answer_flows/landlord-immigration-check/questions/has_other_documents.govspeak.erb
@@ -18,7 +18,7 @@
   - a letter from a private rented sector access scheme, confirming the address of the property it’s helping the person rent from you (dated within the past 3 months)
   - a letter from a British passport holder in an [accepted profession](/government/publications/right-to-rent-landlords-code-of-practice/code-of-practice-on-illegal-immigrants-and-private-rented-accommodation-for-tenancies-starting-on-or-after-1-february-2016#annex-a-list-of-acceptable-professional-persons) who’s known them for at least 3 months, with the professional’s name, address, signature, passport number, profession, most recent work address, how long they’ve known the person and in what capacity (dated within the past 3 months)
   - a letter confirming they’re known to a UK government department or local authority, with the signature and work address of a named official (dated within the past 3 months)
-  - a letter confirming their passport or biometric residence permit was stolen from the UK police, with the crime reference number (dated within the past 3 months)
+  - a letter from the UK police confirming that their passport or biometric residence permit was stolen, with the crime reference number (dated within the past 3 months)
   - a letter confirming they’ve been released from prison within the past 6 months, with their date of birth (from HM, Scottish or Northern Ireland Prison Service)
   - a letter confirming they’re on probation, from their offender manager (dated within the past 3 months)
  <% end %>
