--- a/app/views/smart_answers/visualise.html.erb
+++ b/app/views/smart_answers/visualise.html.erb
@@ -23,7 +23,7 @@
 
 <main id="content" role="main" class="visualisation-">
   <div class="container">
-    <%= render partial: 'govuk_component/alpha_label' %>
+    <%= render 'govuk_component/alpha_label' %>
     <header class="page-header group">
       <div>
         <h1>
