Content updates for Maternity Paternity Calc
Changes to content summarised as:

* Rewrote pay freq hint
* Correct typo in earnings question
* Make paternity leave question clear
* Spell out SMP acronym
* Redo hint: How often do you pay the employee
* Fix link - add / pay freq
* Change :hint to :body on pay frequency

which were taken from:
https://github.com/alphagov/smart-answers/pull/2818

Also update regressions tests and checksums for above.

--- a/lib/smart_answer_flows/maternity-paternity-calculator/questions/earnings_for_pay_period_paternity.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/questions/earnings_for_pay_period_paternity.govspeak.erb
@@ -3,5 +3,5 @@
 <% end %>
 
 <% content_for :hint do %>
-  This is the earnings before deductions like PAYE, pendion or National Insurance contributions.
+  This is the earnings before deductions like PAYE, pension or National Insurance contributions.
 <% end %>
