--- a/app/views/smart_answers/landing.html.erb
+++ b/app/views/smart_answers/landing.html.erb
@@ -28,12 +28,10 @@
       collapse_on_mobile: should_present_new_navigation_view?(@content_item)
     } %>
 
-<div class="grid-row">
-  <main id="content" role="main">
-    <%= render partial: 'landing', locals: { start_node: @presenter.start_node } %>
-
-    <%= render 'smartanswer_metadata' %>
-  </main>
-
+<% content_for :sidebar do %>
   <%= render 'related_items' %>
-</div>
+<% end %>
+
+<%= render partial: 'landing', locals: { start_node: @presenter.start_node } %>
+
+<%= render 'smartanswer_metadata' %>
