Get fee amount from the rates file.
Rather than hard-coding the fees, where possible get them from the rates file.

No test artefacts were affected by this change.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
@@ -45,7 +45,7 @@ You’ll need to get a Nulla Osta if you’re in Italy.
 
 To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
 
-It costs £50 to give notice and £50 for the Nulla Osta. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
 
 You’ll need to bring:
 
