Change content in all opposite sex outcomes Italy
The way we structure the marriage-abroad calculator for Italy is
changing.

Rather than 4 questions that lead to 18 possible outcomes, we are
only going to ask users:

1) Where do you want to get married?
2) Is your partner of the opposite sex, or the same sex?

These questions are questions 1 and 4 for the other countries.

This means that rather than 18 possible outcomes for Italy, there will
only be two: opposite-sex and same-sex.

To prepare for the Italy flow changes, I have changed all of the
opposite-sex outcomes to have the new content, and regenerated the
test artefacts.

These changes form a benchmark, and going forward, the test artefacts
for opposite-sex marriages should not change.

For ease I am hard-coding the fee amounts at this time. After the
opposite-sex outcomes have been consolidated into one template I will
get the fees from the rates file.

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/ceremony_country/partner_british/_opposite_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/ceremony_country/partner_british/_opposite_sex.html.erb
@@ -1,61 +1,100 @@
-Contact the local comune (town hall) before making any plans to find out about local marriage laws, including what documents you’ll need.
+## Before you start
+Contact the local Italian ‘comune’ (town hall) to find out about local marriage laws, including what documents you and your partner will need.
 
-##What you need to do
+If you’re a woman and you live in Italy, you must wait 300 days after divorcing or the death of your husband before remarrying.
+## Prove you’re free to get married
+What you need to do depends on where you are.
 
-You’ll be asked to provide a ‘Nulla Osta’ by the authorities in Italy. This is a certificate that proves you’re allowed to marry.
+You need to prove you’re legally allowed to get married by getting:
 
-To get a Nulla Osta, you’ll first need to post notice of your intended marriage at the British Embassy in Rome.
+- a certificate of no impediment (CNI) and a statutory declaration if you’re in the UK
+- a ‘Nulla Osta’ if you’re in Italy
 
-[Make an appointment at the embassy in Rome.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker)
+If you’re not in the UK or Italy you’ll need to either:
 
-^You’ll need to have been living in Italy for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
+- go to the UK and get a CNI
+- go to Italy and get a Nulla Osta
 
-###Applying for a Nulla Osta
+^Your partner will also need proof that they’re free to get married. The documents they need might be different if they’re not British.^
 
-You’ll need to complete a [‘Notice of marriage’](/government/publications/notice-of-marriage-form--2) form and an [‘Affidavit for marriage’](/government/publications/affirmationaffidavit-of-marital-status-form) form.
+### Get a CNI and a statutory declaration
+You’ll need to get a CNI and a statutory declaration if you’re in the UK.
 
-You can download and fill in (but not sign) the forms in advance.
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
 
-You must take the forms with you to your appointment.
+^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), t[Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
 
-You will need to provide supporting documents, including:
+You’ll need to bring [certain documents](/marriages-civil-partnerships/documents-to-take-to-the-register-office) with you to your appointment.
 
-- you and your partner’s passport
-- your [full birth certificate](/order-copy-birth-death-marriage-certificate/)
-- a utility bill, bank statement, official residency certificate, or driving license showing your name and Italian address (if you don’t normally live in Italy you can show a flight ticket or boarding pass with your date of entry or evidence of your hotel check-in)
-- evidence if you’ve changed your name by deed poll
+Your notice will be publicly displayed in the register office for 28 days. You can collect your CNI after this if nobody registers an objection.
 
-If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need whichever of the following documents is appropriate:
+Your CNI won’t expire if it was issued in England, Wales or Northern Ireland. CNIs issued in Scotland expire after 3 months. Check with your local register office to find out how long a CNI is valid if you live in the [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)
 
-- a [decree absolute or final order](/copy-decree-absolute-final-order)
-- a civil partnership dissolution or annulment certificate
-- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate/)
+You should also check with the comune (town hall) to find out how long a CNI is valid under local law.
 
-You or your partner will also need to provide evidence of nationality or residence in the country where the divorce or dissolution took place, if it was outside the UK. You’ll need to get it [translated](/government/publications/italy-list-of-translators-and-interpreters) if it’s not in English.
+You’ll also need to provide more information in a ‘statutory declaration’. You need to sign it in front of a [solicitor or public notary](http://www.lawsociety.org.uk/find-a-solicitor/) in the UK. They’ll charge you a fee.
 
-^If you’re a woman you must wait 300 days after divorcing or the death of your husband before remarrying.^
+There’s a standard template in English and Italian that you can download and use.
 
-###What happens next
+$D
+[Bilingual statutory declaration (PDF, 90KB)](/government/uploads/system/uploads/attachment_data/file/153753/bilingual-statutory-declaration.pdf)
+$D
 
-The British embassy will display your notice of marriage publicly for 7 days.
+### Get a Nulla Osta
+You’ll need to get a Nulla Osta if you’re in Italy.
 
-They'll issue your CNI within 5 working days of the end of the 7-day notice period (as long as nobody has registered an objection). You can collect your CNI in person or have it delivered by post.
+To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
 
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+It costs £50 to give notice and £50 for the Nulla Osta. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
 
-^You don't need to stay in the country while your notice is posted.^
+You’ll need to bring:
 
-## Fees
+- your passport
+- your partner’s passport (or a copy of their passport if they’re not British)
+- your [full birth certificate](/order-copy-birth-death-marriage-certificate/) including your parents’ details
+- proof that you live in Italy or you’ve been in Italy for at least 3 days - for example a residency certificate, utility bill or boarding pass
+- [notice of marriage](/government/publications/notice-of-marriage-form--2) and [affidavit for marriage](/government/publications/affirmationaffidavit-of-marital-status-form) - you can fill in (but not sign) these in advance
 
-<%= render partial: 'consular_fees_table_items.govspeak.erb',
-           collection: calculator.services,
-           as: :service,
-           locals: { calculator: calculator } %>
+^You can’t use an Italian address on your notice of marriage if you don’t have a residency certificate.^
 
-You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for Italy](/government/publications/italy-consular-fees).
+If you’ve been married or in a civil partnership before, you’ll also need:
 
-<%=  render partial: 'how_to_pay.govspeak.erb',
-            locals: {calculator: calculator}%>
+- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email) - if you’re divorced
+- your annulment certificate - if your marriage or civil partnership was annulled
+- your civil partnership dissolution - if your civil partnership was dissolved
+- evidence of nationality or residence - if the divorce or dissolution took place outside the UK
+- your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
 
-*[CNI]:certificate of no impediment
-*[FCO]:Foreign &amp; Commonwealth Office
+The British embassy will display your notice of marriage publicly for 7 days. If nobody registers an objection, your Nulla Osta should be ready within 2 weeks of giving your notice. You can collect it in person or have it delivered by post.
+
+You don’t need to stay in the country while your notice is displayed.
+
+### If you’ve changed your name
+The names on all documents you provide must appear exactly as they do on your passport - if not, the authorities may refuse to allow the marriage to go ahead.
+
+You’ll need to provide evidence of your name change if the name on your passport is different to your birth certificate (for example, a marriage certificate or deed poll).
+
+### Get your documents translated and legalised
+You need to get your statutory declaration and CNI [legalised](/get-document-legalised) (certified as genuine) by the Foreign & Commonwealth Office (FCO).
+
+You’ll also need to get a certified translation of your CNI. You need to use an [approved translator](/government/publications/italy-list-of-translators-and-interpreters).
+
+You need to get your supporting documents (for example, a decree absolute) [legalised](/get-document-legalised) and [translated](/government/publications/italy-list-of-translators-and-interpreters) if they’re not in English or Italian.
+
+You’ll be charged fees for translating your documents.
+
+## Get married
+To get married, you’ll need either:
+
+- a CNI and a statutory declaration
+- a Nulla Osta
+
+You’ll need to give the original documents to the person who’s going to marry you. This will be:
+
+a priest if you’re having a religious ceremony
+a registrar at the comune (town hall) if you’re having a civil ceremony
+
+## After you get married
+Your marriage should be recognised in the UK if you follow the correct process according to local law - you won’t need to register it in the UK.
+
+If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
