Create France outcomes

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_opposite_sex.html.erb
@@ -1,100 +1,58 @@
 ## Before you start
-Contact the local Italian ‘comune’ (town hall) to find out about local marriage laws, including what documents you and your partner will need.
 
-If you’re a woman and you live in Italy, you must wait 300 days after divorcing or the death of your husband before remarrying.
-## Prove you’re free to get married
-What you need to do depends on where you are.
+You can either get married or enter into a PACS (‘pacte civil de solidarité’, or ‘civil solidarity pact’). PACS is the French version of civil partnership.
 
-You need to prove you’re legally allowed to get married by getting:
+### Marriage
 
-- a certificate of no impediment (CNI) and a statutory declaration if you’re in the UK
-- a ‘Nulla Osta’ if you’re in Italy
+Contact the local town hall (‘mairie’) to find out about local laws, including what documents you’ll need.
 
-If you’re not in the UK or Italy you’ll need to either:
+You, your partner or one of your parents need to have lived in the town where you want to get married for at least 40 days before the ceremony.
 
-- go to the UK and get a CNI
-- go to Italy and get a Nulla Osta
+### PACS
 
-^Your partner will also need proof that they’re free to get married. The documents they need might be different if they’re not British.^
+Contact the local ‘tribunal d’instance’ to find out about local laws, including what documents you’ll need.
 
-### Get a CNI and a statutory declaration
-You’ll need to get a CNI and a statutory declaration if you’re in the UK.
+## Prove you’re free to get married or enter into a PACS
 
-To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage. A CNI costs £35.
+The town hall might ask you for a certificate of celibacy (‘certificat de célibat’) to prove you’re legally allowed to get married or enter into a PACS. British nationals can’t get this, so you’ll need to [download an official note](/government/publications/france-explanatory-note-in-lieu-of-certificat-celibat) instead.
 
-^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
+You’ll also need to get a certificate of custom (‘certificat de coutume’).
 
-You’ll need to bring [certain documents](/marriages-civil-partnerships/documents-to-take-to-the-register-office) with you to your appointment.
+Some town halls only accept a certificate of custom dated less than 6 months before your wedding or PACS. You should check with them before you apply. If your certificate is refused because you applied too early, you will need to apply and pay again.
 
-Your notice will be publicly displayed in the register office for 28 days. You can collect your CNI after this if nobody registers an objection.
+### Get a certificate of custom
 
-Your CNI won’t expire if it was issued in England, Wales or Northern Ireland. CNIs issued in Scotland expire after 3 months. Check with your local register office to find out how long a CNI is valid if you live in the [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)
+s1. Download the application form for certificate of custom for [marriage](/government/publications/application-for-a-certificate-of-custom-law-for-marriage-france) or [PACS](/government/publications/application-form-for-certificate-of-custom-law-for-pacs-france).
+s2. Include a pre-paid self-addressed envelope with your name and address and a recorded delivery receipt (‘récépissé d’un envoi recommandé sans avis de réception’) or a €6.55 postage fee if you want your documents to be returned by recorded delivery.
+s3. Send your completed form, supporting documents and the fee by post to the British Embassy in Paris.
 
-You should also check with the comune (town hall) to find out how long a CNI is valid under local law.
 
-You’ll also need to provide more information in a ‘statutory declaration’. You need to sign it in front of a [solicitor or public notary](http://www.lawsociety.org.uk/find-a-solicitor/) in the UK. They’ll charge you a fee.
+$A
+British Consulate Paris (Certificate of Custom)
+BP 111-08
+75363 Paris Cedex 08
+$A
 
-There’s a standard template in English and Italian that you can download and use.
 
-$D
-[Bilingual statutory declaration (PDF, 90KB)](/government/uploads/system/uploads/attachment_data/file/153753/bilingual-statutory-declaration.pdf)
-$D
+A certificate of custom costs £50. You’ll have to pay the fee [in euros](/government/publications/france-consular-fees).
 
-### Get a Nulla Osta
-You’ll need to get a Nulla Osta if you’re in Italy.
+^If you both need a certificate of custom you can apply at the same time, but each partner must provide a completed application form and supporting documents. You’ll have to pay 2 fees but only one return postage fee.^
 
-To get a Nulla Osta, [make an appointment at the British Embassy in Rome](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-rome/notice-of-marriage-or-civil-partnership/slot_picker) to give notice of your marriage. Your partner doesn’t have to come with you.
+The embassy will send your certificate and documents about 2 weeks after receiving your application. Certificates are issued in French and don’t need to be legalised.
 
-It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the Nulla Osta. If you want to pay in cash you need to pay in the [local currency](/government/publications/italy-consular-fees).
+## Get married or enter into a PACS
 
-You’ll need to bring:
+^If you’re getting married, you’ll need to have a civil ceremony before you can have a religious ceremony.^
 
-- your passport
-- your partner’s passport (or a copy of their passport if they’re not British)
-- your [full birth certificate](/order-copy-birth-death-marriage-certificate/) including your parents’ details
-- proof that you live in Italy or you’ve been in Italy for at least 3 days - for example a residency certificate, utility bill or boarding pass
-- [notice of marriage](/government/publications/notice-of-marriage-form--2) and [affidavit for marriage](/government/publications/affirmationaffidavit-of-marital-status-form) - you can fill in (but not sign) these in advance
-
-^You can’t use an Italian address on your notice of marriage if you don’t have a residency certificate.^
-
-If you’ve been married or in a civil partnership before, you’ll also need:
-
-- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering email) - if you’re divorced
-- your annulment certificate - if your marriage or civil partnership was annulled
-- your civil partnership dissolution - if your civil partnership was dissolved
-- evidence of nationality or residence - if the divorce or dissolution took place outside the UK
-- your partner’s [death certificate](/order-copy-birth-death-marriage-certificate/) and marriage certificate - if you’ve been widowed
-
-The British embassy will display your notice of marriage publicly for 7 days. If nobody registers an objection, your Nulla Osta should be ready within 2 weeks of giving your notice. You can collect it in person or have it delivered by post.
-
-You don’t need to stay in the country while your notice is displayed.
-
-### If you’ve changed your name
-The names on all documents you provide must appear exactly as they do on your passport - if not, the authorities may refuse to allow the marriage to go ahead.
-
-You’ll need to provide evidence of your name change if the name on your passport is different to your birth certificate (for example, a marriage certificate or deed poll).
-
-### Get your documents translated and legalised
-You need to get your statutory declaration and CNI [legalised](/get-document-legalised) (certified as genuine) by the Foreign & Commonwealth Office (FCO).
-
-You’ll also need to get a certified translation of your CNI. You need to use an [approved translator](/government/publications/italy-list-of-translators-and-interpreters).
-
-You need to get your supporting documents (for example, a decree absolute) [legalised](/get-document-legalised) and [translated](/government/publications/italy-list-of-translators-and-interpreters) if they’re not in English or Italian.
-
-You’ll be charged fees for translating your documents.
-
-## Get married
-To get married, you’ll need either:
-
-- a CNI and a statutory declaration
-- a Nulla Osta
-
-You’ll need to give the original documents to the person who’s going to marry you. This will be:
-
-a priest if you’re having a religious ceremony
-a registrar at the comune (town hall) if you’re having a civil ceremony
+You’ll need to give your certificate of custom and official note to the town hall 6 weeks before your wedding or PACS. You can book civil and religious ceremonies at the town hall.
 
 ## After you get married
-Your marriage should be recognised in the UK if you follow the correct process according to local law - you won’t need to register it in the UK.
 
-If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+Your marriage should be recognised in the UK if:
+
+- you follow the correct process according to the law in France
+- it would be allowed under UK law
+
+You won’t need to register your marriage in the UK.
+
+If your partner isn’t British, they can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
