--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_title.html.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/italy/_title.html.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
-    Civil partnership in Italy
+    Marriage and PACS in France
 <% else %>
-    Marriage in Italy
+    Marriage and PACS in France
 <% end %>
