--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_british/_same_sex.govspeak.erb
@@ -6,7 +6,7 @@ You may be able to get married at the British High Commission in Maputo.
 ##What documents you’ll need
 
 
-You’ll need to have been living in Mozambique for 7 full days before you can apply to marry at the British High Commission. You’ll also need to wait a further 14 full days while your notice of marriage is posted at the High Commission.. 
+You’ll need to have been living in Mozambique for 7 full days before you can apply to marry at the British High Commission. You’ll also need to wait a further 14 full days while your notice of marriage is posted at the High Commission.
 
 
 ^You must stay in Mozambique for 14 days from the date of your appointment, if you're not normally resident in Mozambique.^
@@ -16,9 +16,10 @@ You and your partner will need to sign a declaration and provide proof of reside
 
 
 You’ll both need your original passports. If either of you have been divorced, widowed or in a civil partnership before, you’ll also need either:
-[a decree absolute or final order](https://www.gov.uk/copy-decree-absolute-final-order)
-a civil partnership dissolution or annulment certificate
-the [death certificate](https://www.gov.uk/order-copy-birth-death-marriage-certificate/)
+
+- [a decree absolute or final order](https://www.gov.uk/copy-decree-absolute-final-order)
+- a civil partnership dissolution or annulment certificate
+- the [death certificate](https://www.gov.uk/order-copy-birth-death-marriage-certificate/)
 
 
 ##What you need to do
@@ -63,6 +64,5 @@ You normally have to pay fees for consular services in the local currency - thes
 
 
 You can pay by cash or credit card, but not by personal cheque.
-
 
 
