--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/third_country/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/third_country/partner_other/_same_sex.govspeak.erb
@@ -42,7 +42,7 @@ All same-sex marriages must take place under English and Welsh or Scottish law e
 
 ##Naturalisation of your partner if they move to the UK
 
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+Your partner can apply to [become a British citizen](https://www.gov.uk/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
 ## Fees
 
