--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/uk/partner_british/_same_sex.govspeak.erb
@@ -1,6 +1,6 @@
 You may be able to get married at the British High Commission in Maputo.
 
-[Make an appointment at the high commission in Maputo.](https://www.consular-appointments.service.gov.uk/fco/)
+[Make an appointment at the high commission in Maputo.](https://www.consular-appointments.service.gov.uk/fco/#!/british-high-commission-maputo/notice-of-marriage-or-civil-partnership/slot_picker)
 
 ##What documents you’ll need
 
