--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/third_country/partner_other/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/mozambique/third_country/partner_other/_same_sex.govspeak.erb
@@ -2,7 +2,7 @@ You may be able to get married at the British High Commission in Maputo.
 
 ^Same sex marriage must be permitted under the law of your non-British partner’s country. Your partner will need to provide evidence of this from their country’s authorities or a lawyer qualified in the law of that country.^
 
-[Make an appointment at the high commission in Maputo.](https://www.consular-appointments.service.gov.uk/fco/)
+[Make an appointment at the high commission in Maputo.](https://www.consular-appointments.service.gov.uk/fco/#!/british-high-commission-maputo/notice-of-marriage-or-civil-partnership/slot_picker)
 
 ##What documents you’ll need
 
