--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/third_country/partner_other/_opposite_sex.govspeak.erb
@@ -1,7 +1,7 @@
 
 Contact the relevant local authorities in the Philippines to find out about local marriage laws, including what documents you’ll need.
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for the Philippines](/foreign-travel-advice/philippines) before making any plans.
+^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
 ##What you need to do
 
@@ -36,11 +36,7 @@ You can usually get your affirmation or affidavit on the day of your appointment
 
 Once you have your affirmation or affidavit, you can apply for a marriage licence from the local civil registrar.
 
-^Your partner will probably need to get an equivalent document from their national authorities.^
-
-##Naturalisation of your partner if they move to the UK
-
-Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+^Your partner will probably need to get an affirmation or affidavit as well.^
 
 ## Fees
 
