--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_opposite_sex.govspeak.erb
@@ -1,5 +1,3 @@
-Marriage in the Philippines
-
 
 Contact the relevant local authorities in the Philippines to find out about local marriage laws, including what documents you’ll need.
 
@@ -42,13 +40,12 @@ Once you have your affirmation or affidavit, you can apply for a marriage licenc
 
 ## Fees
 
-Service | Fee
--|-
-Affidavit or affirmation for marriage | £55
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+           collection: calculator.services,
+           as: :service,
+           locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for the Philippines](/government/publications/philippines-consular-fees).
 
-You can pay in cash or by cheque issued by a bank.
-
-
-
+<%=  render partial: 'how_to_pay.govspeak.erb',
+            locals: {calculator: calculator}%>
