--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/philippines/_same_sex.govspeak.erb
@@ -1,5 +1,3 @@
-Same-sex marriage and civil partnership in the Philippines
-
 You may be able to register a civil partnership or get married at the British embassy or consulate in the Philippines.
 
 [Make an appointment at the embassy in Manila.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-manila/oaths-affirmations-and-affidavits/slot_picker)
@@ -36,19 +34,16 @@ Your partner can apply to [become a British citizen](/becoming-a-british-citizen
 
 ## Fees
 
-Service | Fee
--|-
-Receiving a notice of registration | £65
-Registering a civil partnership or marriage | £140
-Issuing a civil partnership or marriage certificate | £65
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+           collection: calculator.services,
+           as: :service,
+           locals: { calculator: calculator } %>
 
 You normally have to pay fees for consular services in the local currency - these are shown in the list of [consular fees for the Philippines](/government/publications/philippines-consular-fees).
 
-You can pay in cash or by cheque issued by a bank.
+<%=  render partial: 'how_to_pay.govspeak.erb',
+            locals: {calculator: calculator}%>
 
 ##Convert a civil partnership to a same-sex marriage
 
 If you’ve already entered into a civil partnership you may be able to convert it to a same-sex marriage - read [‘Convert a civil partnership to a same-sex marriage abroad’](/convert-civil-partnership-abroad).
-
-
-
