--- a/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/outcome_same_sex_marriage_and_civil_partnership.govspeak.erb
@@ -145,7 +145,7 @@
   <%= render partial: 'services_and_fees.govspeak.erb',
              locals: { calculator: calculator } %>
 
-  <% if %w{albania australia germany philippines russia serbia vietnam}.include?(calculator.ceremony_country) %>
+  <% if %w{albania australia germany russia serbia vietnam}.include?(calculator.ceremony_country) %>
     <%= render partial: 'convert_cc_to_ss_marriage.govspeak.erb' %>
   <% end %>
 <% end %>
