--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/uk/partner_other/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/uk/partner_other/_opposite_sex.govspeak.erb
@@ -7,18 +7,13 @@ Contact the [Embassy of Vietnam](/government/publications/foreign-embassies-in-t
 
 You’ll be asked to provide an affirmation or affidavit document to prove you’re allowed to marry.
 
-Make an appointment at the British embassy in Vietnam to swear an affidavit (written statement of facts) that you’re free to marry.
+Make an appointment at the British embassy in Vietnam or the British Consulate General in Ho Chi Minh City to swear an affidavit (written statement of facts) that you’re free to marry.
 
-Before booking your appointment, you must complete the following documents:
+[Make an appointment at the British Embassy in Hanoi] (https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-hanoi/oaths-affirmations-and-affidavits/slot_picker)
 
-- a [service request form](/government/publications/service-request-form)
-- an [affirmation or affidavit](/government/publications/affirmation-affidavit-of-marital-status-vietnams) of marital status
+[Make an appointment at the Consulate General in Ho Chi Minh City](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-ho-chi-minh-city/oaths-affirmations-and-affidavits/slot_picker)
 
-Email these documents with a copy of both your passport and your partner’s passport to the British embassy in Hanoi.
-
-<notarialservices.hanoi@fco.gov.uk>
-
-You’ll need to quote your reference number when booking your appointment.
+Before booking your appointment, you must complete the following documents an [affirmation or affidavit](/government/publications/affirmation-affidavit-of-marital-status-vietnams) of marital status. Don’t sign it - you’ll do that at the appointment and in front of a consular officer. 
 
 ###Legalisation and translation
 
@@ -33,6 +28,12 @@ If you’ve been divorced or widowed, you’ll also need:
 You’ll also need to provide evidence if you’ve changed your name by deed poll.
 
 ^Your partner will probably need to get an equivalent document from their national authorities.^
+
+##What happens next
+
+You must present your approved affirmation or affidavit for marriage to a local registrar in Vietnam. They will register the marriage and provide you with a marriage certificate. 
+
+You’ll need to bring your passport. Check with the register what other supporting documents you’ll need. 
 
 ##Naturalisation of your partner if they move to the UK
 
