Remove 'civil partnership' from H1

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/_title.govspeak.erb
@@ -1,6 +1,6 @@
 <% content_for :title do %>
   <% if calculator.partner_is_same_sex? %>
-    Same-sex marriage and civil partnership in Vietnam
+    Same-sex marriage in Vietnam
   <% else %>
     Marriage in Vietnam
   <% end %>
