--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/third_country/partner_british/_same_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/vietnam/third_country/partner_british/_same_sex.govspeak.erb
@@ -27,7 +27,7 @@ You’ll both need to be in Vietnam for 7 clear days (not including the date of 
 
 Once you’ve completed these and paid the registration fee, the embassy or consulate will display your notice publicly for 14 days.
 
-^You must stay in Vietnam while your notice is posted if you're normally resident in Vietnam.^
+^You must stay in Vietnam while your notice is posted if you're not normally resident in Vietnam.^
 
 As long as nobody registers an objection you can get married.
 
