--- a/lib/smart_answer_flows/pip-checker/questions/are_you_getting_dla.govspeak.erb
+++ b/lib/smart_answer_flows/pip-checker/questions/are_you_getting_dla.govspeak.erb
@@ -2,7 +2,7 @@
   Are you getting Disability Living Allowance?
 <% end %>
 
-<% content_for :body do %>
+<% content_for :hint do %>
   If you’re checking for someone else, answer on their behalf.
 <% end %>
 
